book/tests/snapshots/snapshot__@transforms__window-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort age\nderive rnk = rank\n"
input_file: book/tests/prql/transforms/window-2.prql
---
SELECT
  *,
  RANK() OVER (
    ORDER BY
      age ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING
  ) AS rnk
FROM
  employees
ORDER BY
  age

