book/tests/snapshots/snapshot__@transforms__window-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup department (\n  sort age\n  derive rnk = rank\n)\n"
input_file: book/tests/prql/transforms/window-3.prql
---
SELECT
  *,
  RANK() OVER (
    PARTITION BY department
    ORDER BY
      age ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING
  ) AS rnk
FROM
  employees

