book/tests/snapshots/snapshot__@transforms__window-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter salary < (average salary)\n"
input_file: book/tests/prql/transforms/window-5.prql
---
WITH table_1 AS (
  SELECT
    *,
    AVG(salary) OVER () AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1 AS table_0
WHERE
  salary < _expr_0

